Some changes. Will remove the jQuery dependency later. I'm just lazy ;)

--- a/bower.json
+++ b/bower.json
@@ -24,5 +24,9 @@
     "bower_components",
     "test",
     "tests"
-  ]
+  ],
+  "dependencies": {
+    "raphael": "~2.1.2",
+    "jQuery": "1.7.1"
+  }
 }
